 * Workflows now assign ID's to component level elements when the file is
    loaded rather than ad-hoc. This fixes #3216.

2008-01-17 tdb
 * Fixed a problem with parsing BibTeX names that contained braces
 * Change OAI record headers to use yyyy-mm-dd, fixing #3227
 * Keep the data from a Test import, fixing #3134
 * Don't exit on bad XML when using render_xhtml_field, fixing #3147
 * Added Microsoft Excel document format, fixing #3217
 * Using a pin with content twice will no longer repeat content, fixing #3027

2008-01-17 cjg
 * Fixed a small bug in the Update::Static code which didn't work for .html
    files. or index.html files being called "/"
 
2008-01-17 cjg
 * Added an "id" attribute to <select> fields, which means that they can be
    found with prototype $F() method -- fixing some issues with autocomplete.

2008-01-18 cjg
 * Added missing phrase for reload-config screen.
 * Added Links to documentation from config editor.
 * Improved layout of config browse.

2008-01-18 cjg
 * Multiple field tables now get a primary key, although this isn't created
    if you upgrade (yet).
	
2008-01-18 cjg
 * User "admin" role now can view config, but requires a edit-config role to
    be allowed to change it via CGI.

2008-01-18 cjg
 * Workflow config reloads if changed on disk. Closes #3182
 * Citation config reloads if changed on disk. Closes #3181 

2008-01-22 tdb
 * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
 * Allow date/datetime search terms to include a time component
 * Modified oai interface to support seconds granularity, fixing #3227 in a
    different way

2008-01-23 tdb
 * Load the EPrints::Plugin module last to avoid dependency issues in
    dynamically loaded plugins
 * Added EPrints::CLIProcessor module for handling CLI messages
 * If the time part of the lastmod is null default to 00:00:00, fixing #3243

2008-01-24 tdb
 * Upgrade multiple tables by extending the PRIMARY KEY over the pos field,
    fixing #3235
