@@ -92,7 +92,7 @@ sub handler
 
 	my $access = {};
 	$access->{datestamp} = EPrints::Time::get_iso_timestamp( $r->request_time );
-	$access->{requester_id} = 'urn:ip:' . $ip;
+	$access->{requester_id} = $ip;
 	$access->{referent_id} = $r->uri;
 	$access->{referent_docid} = undef;
 	$access->{referring_entity_id} = $r->headers_in->{ "Referer" };
@@ -172,7 +172,7 @@ sub uri_to_eprintid
 	# uri is something like /xxxxxx/?
 	if( $uri->path =~ m#^(?:/archive)?/(\d+)/# )
 	{
-		return 'info:' . EPrints::OpenArchives::to_oai_identifier( $session->get_repository->get_conf( "oai" )->{v2}->{ "archive_id" }, $1 );
+		return $1;
 	}
 	
 	return undef;
@@ -190,7 +190,7 @@ sub uri_to_docid
 
 	if( $uri->path =~ m#^(?:/archive)?/(\d+)/(\d+)/# )
 	{
-		return '#' . 1 * $2;
+		return $2;
 	}
 
 	return undef;
