@@ -110,13 +110,27 @@ sub xml_dataobj
 
 	my $session = $plugin->{ "session" };
 
+	my $timestamp_field;
+	if( $itemtype eq "eprint" )
+	{
+		$timestamp_field = "lastmod";
+	}
+	elsif( $itemtype eq "access" )
+	{
+		$timestamp_field = "datestamp";
+	}
+
+	my $timestamp = $dataobj->get_value( $timestamp_field );
+	my( $date, $time ) = split / /, $timestamp;
+	$timestamp = "${date}T${time}Z";
+
 	# TODO: fix timestamp format
 	my $co = $session->make_element(
 		"ctx:context-object",
 		"xmlns:ctx" => "info:ofi/fmt:xml:xsd:ctx",
 		"xmlns:xsi" => "http://www.w3.org/2001/XML",
 		"xsi:schemaLocation" => "info:ofi/fmt:xml:xsd:ctx http://www.openurl.info/registry/docs/info:ofi/fmt:xml:xsd:ctx",
-		"timestamp" => $dataobj->get_value( "datestamp" ),
+		"timestamp" => $timestamp,
 	);
 
 	if( $itemtype eq "eprint" )
@@ -188,11 +202,12 @@ sub xml_access
 	my $r = $session->make_doc_fragment;
 
 	my $rft = $session->make_element( "ctx:referent" );
+	$r->appendChild( $rft );
 	
 	$rft->appendChild( 
 		$session->make_element( "ctx:identifier" )
 	)->appendChild(
-		$session->make_text( $access->get_value( "referent_id" ) )
+		$session->make_text( $access->get_referent_id )
 	);
 
 	# referring-entity
@@ -215,7 +230,7 @@ sub xml_access
 	$req->appendChild(
 		$session->make_element( "ctx:identifier" )
 	)->appendChild(
-		$session->make_text( $access->get_value( "requester_id" ))
+		$session->make_text( $access->get_requester_id )
 	);
 	
 	if( $access->exists_and_set( "requester_user_agent" ) )
